# Facial-Feature-Extraction-with-CUDA

./: CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  run_parser.py
CPU_test/VJ_cpu/Viola-Jones-cpp-master/: Makefile  debug.txt  dubug.txt  haar.cpp  main.cpp
CudaRuntime1/: CudaRuntime1.sln
CudaRuntime1/CudaRuntime1/: CudaRuntime1.vcxproj
CudaRuntime1/CudaRuntime1/x64/Debug/: CudaRuntime1.exe.recipe  CudaRuntime1.ilk  kernel.cu.cache
CudaRuntime1/CudaRuntime1/x64/Debug/CudaRuntime1.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CudaRuntime1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CudaRuntime1/x64/Debug/: CudaRuntime1.exp  CudaRuntime1.lib
Detected_Images/cpu/: photo10_5_people.pgm  photo1_6_people.pgm  photo2_4_people.pgm  photo3_5_people.pgm  photo5_7_people.pgm  photo6_4_people.pgm  photo7_4_people.pgm  photo8_4_people.pgm  photo9_2_people.pgm
Detected_Images/gpu/: photo10_5_people.pgm  photo1_6_people.pgm  photo3_5_people.pgm  photo5_7_people.pgm  photo6_4_people.pgm  photo7_4_people.pgm  photo8_4_people.pgm  photo9_2_people.pgm
PGM_Images/: Readme  photo10_5_people.pgm  photo1_6_people.pgm  photo2_4_people.pgm  photo3_5_people.pgm  photo5_7_people.pgm  photo6_4_people.pgm  photo7_4_people.pgm  photo8_4_people.pgm
include/: cuda_detect.cuh  haar.h  haar_cuda.h  rectangles.h
lib/viola-jones/: Makefile  image.c  main.cpp
lib/viola-jones/include/: haar.h  rectangles.h
lib/viola-jones/src/: haar.cpp  image.c  rectangles.cpp
logs/cpu/: photo8_4_peoplelog
logs/gpu/: photo8_4_peoplelog
src/: Makefile  cuda_detect.cu  cuda_detect.h  face_detect_cuda.exp  face_detect_cuda.lib  haar.cpp  haar_cuda.cpp  image.c  image_cuda.c  main_cuda.cpp  rectangles.cpp  very_simple.cu  very_simple.exp  very_simple.lib
src/archive/: dummy_cuda.cu
